--- a/v2/popup.html
+++ b/v2/popup.html
@@ -14,9 +14,9 @@
 	<div id="manualSavePassD">
 		<p>Manually save site</p>
 		<form id="manualSavePass">
-			URL: <input type="text" id="siteUrl" required><br>
-			USERNAME: <input type="text" id="siteUsername" required><br>
-			PASS: <input type="password" id="sitePassword" required><br>
+			URL: <br><input type="text" id="siteUrl" required><br>
+			USERNAME: <br><input type="text" id="siteUsername" required><br>
+			PASS: <br><input type="password" id="sitePassword" required><br>
 			<input type="submit">
 		</form>
 	</div>
