--- a/v2/popup.html
+++ b/v2/popup.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="main.css">
+	<script src="web3.min.js"></script>
 	<script src="popup.js"></script>
 </head>
 
